src/test/deca/syntax/invalid/sansobjet/lex_floatdecmin2_invalid.deca
//Test: arrondi vers 0 erreur de compilation
// illagalargument expression ligne 3 arrondi vers 0
1.4012984E-45
